--- a/client/src/index.css
+++ b/client/src/index.css
@@ -139,7 +139,8 @@
 .circular-dropzone {
   width: 320px;
   height: 320px;
-  border: 3px dashed hsl(var(--primary));
+  /* border: 3px dashed hsl(var(--primary)); */
+  border: 3px dashed black;
   border-radius: 50%;
   background: hsl(var(--secondary));
   transition: all 0.3s ease;
@@ -162,7 +163,7 @@
 }
 
 .circular-dropzone.drag-active .dropzone-content {
-  color: white;
+  color: gainsboro;
 }
 
 .dropzone-content {
@@ -220,9 +221,11 @@
 /* Sidebar styles */
 .sidebar {
   position: fixed;
+  /* position: absolute; */
   left: 0;
   top: 0;
   bottom: 0;
+  margin-bottom: 10px;
   width: 300px;
   background: hsl(var(--card));
   border-right: 1px solid hsl(var(--border));
